# EkahauBOM

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-push-hook.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  EXCEL_EXPORT_PLAN.md  EkahauBOM.py  FILTERING_GROUPING_PLAN.md  GITHUB_RELEASE_INSTRUCTIONS.md  MANIFEST.in  Makefile  NEXT_SESSION.md  NEXT_STEPS.md  PHASE6_SUMMARY.md  PHASE_VERIFICATION_REPORT.md  README.md  README.ru.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v2.5.0.md  RELEASE_PROCESS.md  SESSION_SUMMARY.md  VERIFICATION_REPORT.md  WEBUI_PLAN.md  docker-compose.keycloak.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: code-quality.yml  docker-publish.yml  publish-pypi.yml  release.yml  tests.yml
config/: colors.yaml  config.yaml  pricing.yaml
docs/: CLI_REFERENCE.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.ru.md  EXTENDING.md  GITHUB_RELEASE_INSTRUCTIONS.md  PROJECT_COMPARISON.md  PROJECT_COMPARISON.ru.md  RELEASE_AUTOMATION.md  USER_GUIDE.md  USER_GUIDE.ru.md  auth-flowchart-clean.mmd  auth-flowchart-compact.mmd  auth-flowchart.mmd
docs/archive/: README.md
docs/examples/: README.md  WEB_UI_GUIDE.md  WEB_UI_GUIDE.ru.md  config-examples.md
docs/examples/comparison_output/: maga_comparison.csv  maga_comparison.html  maga_comparison.json
ekahau_bom/: __init__.py  __main__.py  analytics.py  batch.py  cable_analytics.py  cli.py  config.py  constants.py  filters.py  models.py  parser.py  pricing.py  utils.py
ekahau_bom/comparison/: __init__.py  engine.py  exporters.py  models.py  visual_diff.py
ekahau_bom/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  html_exporter.py  json_exporter.py  pdf_exporter.py
ekahau_bom/processors/: __init__.py  access_points.py  antennas.py  metadata.py  network_settings.py  notes.py  radios.py  tags.py
ekahau_bom/visualizers/: __init__.py  floor_plan.py
ekahau_bom_web/: .gitignore  README.md  test_upload.py
ekahau_bom_web/backend/: .env  .env.example  =2.8.0  =60.0  Dockerfile  README.md  pyproject.toml  test_batch_download.py  test_reports.py  update_metadata.py
ekahau_bom_web/backend/app/: __init__.py  auth.py  config.py  main.py  models.py
ekahau_bom_web/backend/app/api/: auth.py  batches.py  comparison.py  notes.py  projects.py  reports.py  schedules.py  templates.py  upload.py  websocket.py
ekahau_bom_web/backend/app/auth/: __init__.py  base.py  oauth2.py  simple.py
ekahau_bom_web/backend/app/services/: archive.py  batch_archive_service.py  batch_service.py  cache.py  index.py  notification_service.py  processor.py  report_schedule_service.py  scheduler_service.py  storage.py  storage_service.py  template_service.py  watch_service.py
ekahau_bom_web/backend/app/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py
ekahau_bom_web/backend/app/tasks/: __init__.py  archive_old_batches.py  archive_old_projects.py  cleanup_expired_links.py
ekahau_bom_web/backend/app/templates/emails/: schedule_completed.html  schedule_failed.html  schedule_partial.html
ekahau_bom_web/backend/app/utils/: etag.py  migrate_storage.py  short_links.py  thumbnails.py
ekahau_bom_web/backend/app/websocket/: __init__.py  manager.py
ekahau_bom_web/backend/data/: index.json
ekahau_bom_web/backend/data/test_output/: original_original.xlsx
ekahau_bom_web/backend/data/test_pdf/: maga_maga.xlsx
ekahau_bom_web/backend/docs/: STORAGE_TESTING_REPORT.md
ekahau_bom_web/backend/tests/: test_advanced_filtering.py  test_api.py  test_auth.py  test_batch_api.py  test_batch_service.py  test_comparison_api.py  test_index.py  test_load.py  test_notification_service.py  test_oauth2.py  test_processor.py  test_schedule_api.py  test_scheduler_service.py  test_short_links.py  test_storage.py  test_storage_abstraction.py  test_storage_error_handling.py  test_storage_integration.py  test_storage_performance.py  test_storage_s3.py  test_template_api.py
tests/: __init__.py  test_advanced_analytics.py  test_analytics.py  test_base_exporter.py  test_batch.py  test_batch_integration.py  test_cable_analytics.py  test_comparison_engine.py  test_comparison_exporters.py  test_comparison_visual_diff.py  test_config.py  test_csv_exporter.py  test_excel_exporter.py  test_filters.py  test_floor_plan_visualizer.py  test_html_exporter.py  test_imports.py  test_integration.py  test_json_exporter.py  test_main.py  test_metadata_processor.py  test_models.py  test_network_settings_processor.py  test_notes_processor.py  test_parser.py  test_pdf_exporter.py  test_pricing.py  test_processors.py  test_radio_processor.py  test_tags.py  test_utils.py
(+82 files in other folders)
