[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekahau-bom"
version = "3.0.5"
description = "Bill of Materials (BOM) generator for Ekahau AI project files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Pavel Semenischev"}
]
maintainers = [
    {name = "Pavel Semenischev"}
]
keywords = [
    "ekahau",
    "bom",
    "bill-of-materials",
    "wireless",
    "wifi",
    "networking",
    "access-points",
    "network-design"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "PyYAML>=6.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
pdf = [
    "WeasyPrint>=60.0",
]
rich = [
    "rich>=13.0.0",
]
visualization = [
    "Pillow>=10.0.0",
]
all = [
    "WeasyPrint>=60.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pylint>=2.15.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/htechno/EkahauBOM"
Repository = "https://github.com/htechno/EkahauBOM"
Documentation = "https://github.com/htechno/EkahauBOM/tree/main/docs"
"Bug Tracker" = "https://github.com/htechno/EkahauBOM/issues"
Changelog = "https://github.com/htechno/EkahauBOM/blob/main/CHANGELOG.md"

[project.scripts]
ekahau-bom = "ekahau_bom.cli:main"

[tool.setuptools]
packages = ["ekahau_bom", "ekahau_bom.processors", "ekahau_bom.exporters", "ekahau_bom.visualizers"]

[tool.setuptools.package-data]
ekahau_bom = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["ekahau_bom"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]
