[project]
name = "ekahau-bom-web"
version = "0.1.0"
description = "Web service for Ekahau BOM processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",  # file upload
    "aiofiles>=23.2.0",          # async file operations
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # for Settings
    "pyjwt>=2.8.0",              # JWT authentication
    "pillow>=10.0.0",            # image processing for thumbnails
    "cachetools>=5.3.0",         # TTL caching for API responses
    "ekahau-bom>=2.8.0",         # основной пакет
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # async client для тестов
    "black>=23.11.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
